<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtName"
        android:textColor="@color/ColorPrimaryDark"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/tvAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtAddress"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp"
        />

    <TextView
        android:id="@+id/tvRemarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtRemarks"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="12sp"
        />

</LinearLayout>