<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/action_settings"-->
        <!--android:orderInCategory="10"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/action_settings"/>-->
    <item
        android:id="@+id/action_list"
        android:orderInCategory="20"
        app:showAsAction="never"
        android:title="@string/action_list"/>
    <!---
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="30"
        app:showAsAction="never"
        android:title="@string/action_edit"/>
        -->
    <item
        android:id="@+id/action_marker"
        android:orderInCategory="40"
        app:showAsAction="never"
        android:title="@string/action_marker_map"/>
    <item
        android:id="@+id/action_places"
        android:orderInCategory="50"
        app:showAsAction="never"
        android:title="@string/action_google_places_map"/>
    <!---
    <item
        android:id="@+id/action_quit"
        android:orderInCategory="60"
        app:showAsAction="never"
        android:title="@string/action_quit"/>
        -->
</menu>